--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +35,47 @@
   to {
     transform: rotate(360deg);
   }
+} */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.MainNavContainer {
+  /* width: 100%; */
+  width: 222px;
+  height: 100vh;
+  padding-top: 20px;
+  display: flex;
+  flex-direction: column;
+  background-color: #dfe4ea;
+}
+.contant {
+  margin-top: 55px;
+  display: flex;
+  flex-direction: column;
+}
+.pageslink {
+  /* width: 171px; */
+  height: 46px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-radius: 8px;
+  margin: 0.8rem;
+}
+a {
+  text-decoration: none;
+  width: 100%;
+  height: 100%;
+  color: #ffffff;
+  padding-left: 30px;
+  border-radius: 8px;
+  font: normal normal normal 20px/19px Rubik;
+}
+
+.wrapContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
 }
